kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pati-backend
  labels:
    app: pati-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pati-backend
  template:
    metadata:
      labels:
        app: pati-backend
    spec:
      containers:
      - name: pati-backend
        image: ghcr.io/kotlinknight/pati:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
