kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pati-backend-service
spec:
  selector:
    app: pati-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
